--- a/src/_sass/minima.scss
+++ b/src/_sass/minima.scss
@@ -12,7 +12,11 @@ $spacing-unit:     30px !default;
 
 $text-color:       #111 !default;
 $background-color: #fdfdfd !default;
-$brand-color:      #2a7ae2 !default;
+//$brand-color:      #2a7ae2 !default;
+// $text-color:       #B08699 !default;
+// $background-color: #FFF59E !default;
+$brand-color:      #FF3319 !default;
+$brand-alt-color:  #FAED8F !default;
 
 $grey-color:       #828282 !default;
 $grey-color-light: lighten($grey-color, 40%) !default;
