Better layout for films

--- a/_layouts/microreviews.html
+++ b/_layouts/microreviews.html
@@ -15,7 +15,9 @@ layout: default
       {% for film in site.films %}
         {% if page.event == film.event %}
           <li><h3>{{ film.title }}</h3></li>
-          <p>{{ film.content | markdownify }}</p>
+          <p>{{ film.content | markdownify }}[<a href={{ film.url }} title="Link"">LN</a>]</p>
+          {% if film.rating %}<h4>{{ film.rating }}</h4>{% endif %}
+          <br />
         {% endif %}
       {% endfor %}
     </ol>
