--- a/rnp/themes/chocos/layouts/index.html
+++ b/rnp/themes/chocos/layouts/index.html
@@ -1,3 +1,7 @@
 {{ define "main" }}
-{{ .Content }}
+  {{ .Content }}
+  {{ range (where .Site.RegularPages "Section" "posts") }}
+    <h2><a href="{{ .RelPermalink }}">{{ .LinkTitle }}</a></h2>
+    {{ .Summary }}
+  {{ end }}
 {{ end }}
