--- a/rnp/themes/chocos/layouts/partials/head/js.html
+++ b/rnp/themes/chocos/layouts/partials/head/js.html
@@ -1,4 +1,16 @@
-{{- with resources.Get "js/main.js" }}
+{{- with resources.Get "js/theme.js" }}
+  {{- if eq hugo.Environment "development" }}
+    {{- with . | js.Build }}
+      <script src="{{ .RelPermalink }}"></script>
+    {{- end }}
+  {{- else }}
+    {{- $opts := dict "minify" true }}
+    {{- with . | js.Build $opts | fingerprint }}
+      <script src="{{ .RelPermalink }}" integrity="{{- .Data.Integrity }}" crossorigin="anonymous"></script>
+    {{- end }}
+  {{- end }}
+{{- end }}
+{{- with resources.Get "js/site.js" }}
   {{- if eq hugo.Environment "development" }}
     {{- with . | js.Build }}
       <script src="{{ .RelPermalink }}"></script>
