--- a/rnp/themes/chocos/layouts/partials/header.html
+++ b/rnp/themes/chocos/layouts/partials/header.html
@@ -1,2 +1,8 @@
-<a href="/"><h1>{{ site.Title }}</h1></a>
-{{ partial "menu.html" (dict "menuID" "main" "page" .) }}
+<div class="container">
+    <div class="content">
+        <a href="/"><h1>{{ site.Title }}</h1></a>
+    </div>
+    <div class="content right">
+        {{ partial "menu.html" (dict "menuID" "main" "page" .) }}
+    </div>
+</div>
