Parse dates from filenames and sort on homepage

--- a/rnp/themes/chocos/layouts/index.html
+++ b/rnp/themes/chocos/layouts/index.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
   {{ .Content }}
-  {{ range (where .Site.RegularPages "Section" "posts") }}
+  {{ range (where .Site.RegularPages "Section" "posts").ByDate.Reverse }}
     <h2><a href="{{ .RelPermalink }}">{{ .LinkTitle }}</a></h2>
     {{ .Summary }}
   {{ end }}
