--- a/rnp/themes/chocos/assets/css/main.css
+++ b/rnp/themes/chocos/assets/css/main.css
@@ -55,3 +55,10 @@ ul.no-bullets {
   padding: 0; /* Remove padding */
   margin: 0; /* Remove margins */
 }
+
+.img-responsive
+{
+    max-width: 100%;
+    min-width: 300px;
+    height: auto;
+}
