--- a/rnp/themes/chocos/layouts/_default/single.html
+++ b/rnp/themes/chocos/layouts/_default/single.html
@@ -5,6 +5,15 @@
     {{ $dateHuman := .Date | time.Format ":date_long" }}
     <time class="content right" datetime="{{ $dateMachine }}">{{ $dateHuman }}</time>
   </div>
+  {{ with .Params.image }}
+    {{ $imageName := . }}
+    {{ $image := resources.Get $imageName }}
+    {{ $image := $image.Resize "500x" }}
+    {{ with $image }}
+      <img src="{{ .RelPermalink }}" class="img-responsive" alt="{{ $.Title }}">
+    {{ end }}
+
+  {{ end }}
   {{ .Content }}
   {{ partial "terms.html" (dict "taxonomy" "tags" "page" .) }}
 {{ end }}
