--- a/rnp/themes/chocos/layouts/_default/single.html
+++ b/rnp/themes/chocos/layouts/_default/single.html
@@ -1,6 +1,11 @@
 {{ define "main" }}
   <div class="container">
-    <h1 class="content">{{ .Title }}</h1>
+    <div class="content">
+      <h1>{{ .Title }}</h1>
+      {{ with .Params.subtitle }}
+        <p>{{ . }}</p>
+      {{ end }}
+    </div>
     {{ $dateMachine := .Date | time.Format "2006-01-02T15:04:05-07:00" }}
     {{ $dateHuman := .Date | time.Format ":date_long" }}
     <time class="content right" datetime="{{ $dateMachine }}">{{ $dateHuman }}</time>
