Paginate the home page

--- a/rnp/themes/chocos/assets/css/main.css
+++ b/rnp/themes/chocos/assets/css/main.css
@@ -64,3 +64,12 @@ ul.no-bullets {
     min-width: 300px;
     height: auto;
 }
+
+ul.pagination {
+  display: inline;
+  list-style-type: none;
+}
+li.page-item {
+  display: inline;
+  list-style-type: none;
+}
