--- a/rnp/themes/chocos/layouts/partials/menu.html
+++ b/rnp/themes/chocos/layouts/partials/menu.html
@@ -12,7 +12,7 @@ Renders a menu for the given menu ID.
 
 {{- with index site.Menus $menuID }}
   <nav>
-    <ul class="no-bullets">
+    <ul class="no-bullets inline">
       {{- partial "inline/menu/walk.html" (dict "page" $page "menuEntries" .) }}
     </ul>
   </nav>
