--- a/rnp/themes/chocos/layouts/_default/list.html
+++ b/rnp/themes/chocos/layouts/_default/list.html
@@ -1,8 +1,11 @@
 {{ define "main" }}
   <h1>{{ .Title }}</h1>
   {{ .Content }}
-  {{ range .Pages }}
+  {{ $paginator := .Paginate .Pages }}
+  {{ range $paginator.Pages }}
     <h2><a href="{{ .RelPermalink }}">{{ .LinkTitle }}</a></h2>
     {{ .Summary }}
   {{ end }}
+  {{ template "_internal/pagination.html" (dict "page" . "format" "terse") }}
+
 {{ end }}
