Style lists a bit more nicely

--- a/rnp/themes/chocos/assets/css/main.css
+++ b/rnp/themes/chocos/assets/css/main.css
@@ -60,9 +60,10 @@ ul.no-bullets {
 ul.inline {
   display: inline;
 }
-li {
-  display: inherit;
-}
+
+.inline li { display: inherit; }
+.inline li:after { content: "  |  "; }
+.inline li:last-child:after { content: ""; }
 
 .img-responsive
 {
