--- a/rnp/themes/chocos/assets/css/main.css
+++ b/rnp/themes/chocos/assets/css/main.css
@@ -1,11 +1,11 @@
 body {
-  color: #222;
+  color: navy;
   font-family: sans-serif;
   line-height: 1.5;
   margin: 0 auto;
   padding: 1rem;
   max-width: 650px;
-  
+  background-color: snow;
 }
 
 header {
@@ -19,7 +19,7 @@ footer {
 }
 
 a {
-  color: #00e;
+  color: darkblue;
   text-decoration: none;
 }
 
