--- a/rnp/themes/chocos/layouts/_default/baseof.html
+++ b/rnp/themes/chocos/layouts/_default/baseof.html
@@ -7,7 +7,7 @@
   <header>
     {{ partial "header.html" . }}
   </header>
-  <main>
+  <main class="main-col">
     {{ block "main" . }}{{ end }}
   </main>
   <footer>
