--- a/rnp/themes/chocos/layouts/partials/header.html
+++ b/rnp/themes/chocos/layouts/partials/header.html
@@ -1,2 +1,4 @@
-<a href="/"><h1>{{ site.Title }}</h1></a>
-{{ partial "menu.html" (dict "menuID" "main" "page" .) }}
+<div class="main-col">
+    <a href="/"><h1 class="site-title">{{ site.Title }}</h1></a>
+    {{ partial "menu.html" (dict "menuID" "main" "page" .) }}
+</div>
