A lot of getting my head eround CSS

--- a/rnp/themes/chocos/assets/css/main.css
+++ b/rnp/themes/chocos/assets/css/main.css
@@ -2,6 +2,11 @@
 :root {
   --color-text: black;
   --color-background: snow;
+  --color-header: red;
+  --color-header-text: snow;
+  --color-links: #FF3319;
+  --color-accent: yellow;
+  --breakpoint-small: 500px;
 }
 
 /* Dark mode if the browser asks nicely */
@@ -26,8 +31,8 @@ body {
 header {
   border-bottom: 5px solid #222;
   margin-bottom: 1rem;
-  color: snow;
-  background-color: red;
+  color: var(--color-header-text);
+  background-color: var(--color-header);
 }
 .main-col {
   line-height: 1.5;
@@ -43,11 +48,11 @@ footer {
 }
 
 a {
-  color: #FF3319;
+  color: var(--color-links);
   text-decoration: underline;
 }
 header a {
-  color: snow;
+  color: var(--color-header-text);
   text-decoration: none;
 }
 
@@ -72,6 +77,7 @@ header a {
    justify-content: end;
    align-items: center;
 }
+
 @media (max-width: 500px) {
   .container .icon, .container .content {
     flex: 100%;
@@ -106,10 +112,32 @@ img {
 }
 
 ul.pagination {
-  display: inline;
   list-style-type: none;
+  padding: 0;
+  justify-content: center;
+  text-align: center;
 }
-li.page-item {
+ul.pagination li {
   display: inline;
-  list-style-type: none;
+  margin: 1rem;
+  padding: 1rem;
+  border: var(--color-header) 3px solid;
+  border-radius: 5px;
 }
+
+@media (max-width: 500px) {
+  ul.pagination li {
+    margin: 0.5rem;
+    padding: 0.2rem;
+    background-color: var(--color-header);
+    & a {
+    color: var(--color-text);
+    }  
+  }
+}
+
+ul.pagination .active, ul.pagination .active a {
+  background-color: var(--color-accent);
+  text-decoration: none;
+}
+
