--- a/rnp/themes/chocos/layouts/_default/baseof.html
+++ b/rnp/themes/chocos/layouts/_default/baseof.html
@@ -2,6 +2,7 @@
 <html lang="{{ site.Language.LanguageCode }}" dir="{{ or site.Language.LanguageDirection `ltr` }}">
 <head>
   {{ partial "head.html" . }}
+  {{ block "extrahead" . }}{{ end }}
 </head>
 <body>
   <header>
