Sort out RSS feeds

--- a/rnp/themes/chocos/layouts/partials/social-media.html
+++ b/rnp/themes/chocos/layouts/partials/social-media.html
@@ -9,7 +9,7 @@
             Instagram
         </a> - 
     {{ end }}
-    <a href="/feed.xml">
-        RSS feed
+    <a href="/feeds">
+        RSS feeds
     </a>
 </div>
