Match previous version red

--- a/rnp/themes/chocos/assets/css/main.css
+++ b/rnp/themes/chocos/assets/css/main.css
@@ -2,7 +2,7 @@
 :root {
   --color-text: black;
   --color-background: snow;
-  --color-header: red;
+  --color-header: #FF3319;
   --color-header-text: snow;
   --color-links: #FF3319;
   --color-accent: yellow;
