--- a/rnp/themes/chocos/layouts/walks/list.html
+++ b/rnp/themes/chocos/layouts/walks/list.html
@@ -1,10 +1,10 @@
 {{ define "main" }}
   <h1>{{ .Title }}</h1>
   {{ .Content }}
-  {{ $paginator := .Paginate .Pages 5 }}
+  {{ $paginator := .Paginate .Pages }}
   {{ range $paginator.Pages }}
     <h2><a href="{{ .RelPermalink }}">{{ .LinkTitle }}</a></h2>
-    {{ .Content }}
+    {{ .Summary }}
   {{ end }}
   {{ template "_internal/pagination.html" (dict "page" . "format" "terse") }}
 
