--- a/rnp/themes/chocos/assets/css/main.css
+++ b/rnp/themes/chocos/assets/css/main.css
@@ -151,3 +151,10 @@ ul.pagination .active, ul.pagination .active a {
   text-decoration: none;
 }
 
+hr.post-separator {
+  border: none;
+  border-top: 1px solid #222;
+  margin: 2rem auto;
+  width: 50%;
+}
+
